2007-12-30  Peter Landgren <peter.talken@telia.com>
	* src/plugins/rel:sv.py: Firts release 

2007-12-29  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/ReportBase/_BareReportDialog.py:
	* src/ReportBase/_ReportOptions.py:
	* src/plugins/DescendReport.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/CalculateEstimatedDates.py:
	* src/plugins/Calendar.py:
	* src/plugins/GVFamilyLines.py:
	* src/plugins/AncestorReport.py:
	* src/plugins/DescendChart.py:
	* src/plugins/EndOfLineReport.py:
	* src/plugins/AncestorChart.py:
	* src/plugins/DetAncestralReport.py:
	* src/plugins/FamilyGroup.py:
	* src/plugins/GVRelGraph.py:
	* src/plugins/GVHourGlass.py:
	* src/plugins/FamilyLines.py:
	* src/plugins/FanChart.py:
	* src/DbState.py:
	* src/PluginUtils/__init__.py:
	* src/PluginUtils/_MenuOptions.py:
	* src/BaseDoc.py:
	More updates to better support MenuOptions. FamilyLines seems to work now.

2007-12-29  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/MyGrampsView.py: show matching surnames
	* src/plugins/OnThisDay.py: refinement
	* src/plugins/SameSurnames.py: changed name
	* src/plugins/DefaultGadgets.py: calendar calls quickreport
	* src/QuickReports.py: new function to call qr directly
	* src/Simple/_SimpleAccess.py: new func to format dates

2007-12-29  Douglas S. Blank  <dblank@saliva.brynmawr.edu>
	* src/DataViews/MyGrampsView.py: fixme's are fixed
	* src/DataViews/EventView.py: added quick report popup
	* src/plugins/SameSurnames.py: removed unneeded imports
	* src/plugins/siblings.py: removed unneeded imports
	* src/Simple/_SimpleTable.py: add date handler
	* src/plugins/OnThisDay.py: new event quick report

2007-12-29 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ArgHandler.py: better handling of -l
	* src/const.py.in: forgot to commit this, new constants
	* configure.in: remove GrampsDb makefile
	* src/DbManager.py: allow inheriting create_new_db_cli
	Rerun ./autogen.sh !!
