@@ -1,3 +1,11 @@
+2007-12-30  Douglas S. Blank  <dblank@cs.brynmawr.edu>
+	* src/plugins/OnThisDay.py: i18n changes
+	* src/plugins/Makefile.am: added missing files
+	* src/plugins/DefaultGadgets.py: i18n changes
+	* src/QuickReports.py: allow callers to send obj directly
+	* src/Simple/_SimpleTable.py: added support for objs
+	* po/POTFILES.in: i18n changes
+
 2007-12-30  Peter Landgren <peter.talken@telia.com>
 	* src/plugins/rel:sv.py: Firts release 
 
